--- a/config/database.yml
+++ b/config/database.yml
@@ -6,9 +6,9 @@
 
 development:
   adapter: postgresql
-  database: pomodoro
-  username: pomodoro
-  password: eu99vett
+  database: user
+  username: user
+  password: pass
 
 # development:
 #  adapter: sqlite3
